--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,9 @@
         android:id="@+id/noImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="50dp"
+        android:layout_centerVertical="true"
+        android:textColor="#9e9e9e"
         android:layout_centerHorizontal="true"
         android:text="No image selected."
         android:layout_below="@id/select" />
@@ -49,7 +51,24 @@
         android:onClick="atomize"
         android:backgroundTint="@color/colorPrimary"
         android:layout_above="@id/devBy"
-        android:layout_marginBottom="75dp"/>
+        android:layout_marginBottom="20dp"/>
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/deleteSwitch"
+        android:layout_above="@id/atomize"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/deleteSwitchHint"
+        android:text="Delete original file when done?"
+        android:layout_above="@id/deleteSwitch"
+        android:layout_margin="10dp"/>
 
     <!--android:layout_centerVertical="true"-->
 
@@ -59,6 +78,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/select"
         android:layout_margin="10dp"
-        android:layout_above="@id/atomize"/>
+        android:layout_above="@id/deleteSwitchHint" />
 
 </RelativeLayout>
