--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,8 @@
         android:id="@+id/deleteSwitch"
         android:layout_above="@id/atomize"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:checked="true"/>
 
     <TextView
         android:layout_width="wrap_content"
