--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.wrmndfzy.atomize.MainActivity">
+    tools:context="com.wrmndfzzy.atomize.MainActivity">
 
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select a photo"
+        android:text="@string/select_photo"
         android:id="@+id/select"
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="true"
@@ -30,7 +30,7 @@
         android:textColor="#9e9e9e"
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
-        android:text="No image selected."
+        android:text="@string/no_image"
         android:layout_below="@id/select" />
 
     <TextView
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/devBy"
         android:textSize="5pt"
-        android:text="Developed by Team Wrmndfzzy."
+        android:text="@string/devBy"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
@@ -55,7 +55,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Atomize!"
+        android:text="@string/atomString"
         android:id="@+id/atomize"
         android:layout_centerHorizontal="true"
         android:onClick="atomize"
@@ -77,17 +77,17 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:id="@+id/deleteSwitchHint"
-        android:text="Delete original file when done?"
+        android:text="@string/delString"
         android:layout_above="@id/deleteSwitch"
         android:layout_margin="10dp"/>
 
-    <!--android:layout_centerVertical="true"-->
-
     <ImageView
         android:id="@+id/imgPreview"
+        android:contentDescription="@null"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/imgPath"
-        android:layout_above="@id/deleteSwitchHint" />
+        android:layout_above="@id/deleteSwitchHint"
+        android:src="@drawable/atom_watermark"/>
 
 </RelativeLayout>
