--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,11 @@
 <resources>
     <color name="colorPrimary">#616161</color>
     <color name="colorPrimaryDark">#424242</color>
-    <color name="colorAccent">#b71c1c</color>
+    <color name="colorAccent">#fb8c00</color>
     <color name="colorBackground">#212121</color>
 
-    <color name="intro_slide1_color">#B71C1C</color>
-    <color name="intro_slide2_color">#0D47A1</color>
-    <color name="intro_slide3_color">#1B5E20</color>
-    <color name="intro_slide4_color">#7B1FA2</color>
+    <color name="intro_slide2_color">#B71C1C</color>
+    <color name="intro_slide3_color">#0D47A1</color>
+    <color name="intro_slide4_color">#1B5E20</color>
+    <color name="intro_slide5_color">#7B1FA2</color>
 </resources>
