--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#616161</color>
     <color name="colorPrimaryDark">#424242</color>
     <color name="colorAccent">#fb8c00</color>
+    <color name="colorAccentLight">#ffab40</color>
     <color name="colorBackground">#212121</color>
 
     <color name="intro_slide2_color">#B71C1C</color>
