--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#fb8c00</color>
     <color name="colorAccentLight">#ffab40</color>
     <color name="colorBackground">#212121</color>
+    <color name="colorWrmndfzzy">#ff6a00</color>
 
     <color name="intro_slide2_color">#B71C1C</color>
     <color name="intro_slide3_color">#0D47A1</color>
