--- a/app/src/main/res/layout/intro_slide4.xml
+++ b/app/src/main/res/layout/intro_slide4.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/intro_slide4_color"
+    android:background="@android:color/transparent"
     android:layout_weight="10"
     android:id="@+id/introSlide4">
 
@@ -48,6 +48,16 @@
         android:textSize="16sp"
         android:textColor="@android:color/white"
         android:text="@string/intro_slide4_content"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
+        android:text="@string/intro_slide4_button"
+        android:id="@+id/intro_permissions_button"
+        android:onClick="introPermissions"/>
 
     <TextView
         android:layout_width="fill_parent"
