--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,18 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.wrmndfzzy.atomize.MainActivity">
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/select_photo"
-        android:id="@+id/select"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentStart="false"
-        android:backgroundTint="@color/colorPrimary"/>
-
     <TextView
         android:id="@+id/imgPath"
         android:layout_width="wrap_content"
@@ -30,8 +19,7 @@
         android:textColor="#9e9e9e"
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
-        android:text="@string/no_image"
-        android:layout_below="@id/select" />
+        android:text="@string/no_image" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -52,22 +40,11 @@
         android:layout_marginBottom="10dp"
         android:visibility="invisible"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/atomString"
-        android:id="@+id/atomize"
-        android:layout_centerHorizontal="true"
-        android:onClick="atomize"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_above="@id/progBar"
-        android:layout_marginBottom="10dp"/>
-
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/deleteSwitch"
-        android:layout_above="@id/atomize"
+        android:layout_above="@id/devBy"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         android:checked="true"/>
@@ -90,4 +67,31 @@
         android:layout_above="@id/deleteSwitchHint"
         android:src="@drawable/atom_watermark"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab2"
+        android:layout_width="@dimen/standard_45"
+        android:layout_height="@dimen/standard_45"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/standard_21"
+        app:srcCompat="@drawable/image" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab1"
+        android:layout_width="@dimen/standard_45"
+        android:layout_height="@dimen/standard_45"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/standard_21"
+        app:srcCompat="@drawable/atom"
+        android:onClick="atomize"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/plus" />
 </RelativeLayout>
