--- a/app/src/main/res/layout/intro_slide4.xml
+++ b/app/src/main/res/layout/intro_slide4.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
     android:layout_weight="10"
@@ -48,16 +50,16 @@
         android:textSize="16sp"
         android:textColor="@android:color/white"
         android:text="@string/intro_slide4_content"/>
-    <Button
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/intro_permissions_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:text="@string/intro_slide4_button"
-        android:id="@+id/intro_permissions_button"
-        android:onClick="introPermissions"/>
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/key"
+        android:onClick="introPermissions"
+        app:backgroundTint="@color/colorWrmndfzzy" />
 
     <TextView
         android:layout_width="fill_parent"
