--- a/app/src/main/res/drawable-xxxhdpi/check.xml
+++ b/app/src/main/res/drawable-xxxhdpi/check.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@drawable/atom_alpha"
+    android:src="@drawable/ic_done_black"
     android:tint="@color/colorBackground" />
