--- a/app/src/main/res/layout/aboutapp_dialog.xml
+++ b/app/src/main/res/layout/aboutapp_dialog.xml
@@ -1,52 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    android:orientation="vertical">
 
     <Toolbar
+        android:id="@+id/aaDialogToolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/aaDialogToolbar">
+        android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/aboutIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_atom"
+            android:contentDescription="@null"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:contentDescription="@null"
-            android:id="@+id/aboutIcon" />
+            android:src="@mipmap/ic_atom" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="10dp"
             android:text="@string/app_name"
             android:textAlignment="center"
-            android:textStyle="bold"
-            android:padding="10dp"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </Toolbar>
 
     <us.feras.mdv.MarkdownView
+        android:id="@+id/atomizeReadme"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:id="@+id/atomizeReadme"
         android:layout_below="@id/aaDialogToolbar"
-        android:scrollbars="vertical"
+        android:background="@color/colorBackground"
         android:fillViewport="true"
-        android:background="@color/colorBackground"/>
+        android:scrollbars="vertical" />
 
     <Button
+        android:id="@+id/aaDialogConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/atomizeReadme"
         android:layout_alignParentEnd="true"
-        android:id="@+id/aaDialogConfirm"
-        android:text="@string/confirmText"
-        android:textColor="@color/colorAccent"
-        android:padding="10dp"
         android:background="@android:color/transparent"
-        android:layout_below="@id/atomizeReadme"/>
+        android:padding="10dp"
+        android:text="@string/confirmText"
+        android:textColor="@color/colorAccent" />
 
 </RelativeLayout>
