--- a/app/src/main/res/layout/aboutwrmndfzzy_dialog.xml
+++ b/app/src/main/res/layout/aboutwrmndfzzy_dialog.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/wrmndfzzylogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@null"
         android:paddingTop="10dp"
-        android:id="@+id/wrmndfzzylogo"
-        android:src="@drawable/wrmndfzzy"/>
+        android:src="@drawable/wrmndfzzy" />
 
     <us.feras.mdv.MarkdownView
+        android:id="@+id/wrmndfzzyReadme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/wrmndfzzyReadme"
         android:layout_below="@id/wrmndfzzylogo"
-        android:scrollbars="vertical"
+        android:background="@color/colorBackground"
         android:fillViewport="true"
-        android:background="@color/colorBackground"/>
+        android:scrollbars="vertical" />
 
     <Button
+        android:id="@+id/awDialogConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/wrmndfzzyReadme"
         android:layout_alignParentEnd="true"
-        android:id="@+id/awDialogConfirm"
-        android:text="@string/confirmText"
-        android:textColor="@color/colorAccent"
-        android:padding="10dp"
         android:background="@android:color/transparent"
-        android:layout_below="@id/wrmndfzzyReadme"/>
+        android:padding="10dp"
+        android:text="@string/confirmText"
+        android:textColor="@color/colorAccent" />
 
 </RelativeLayout>
