--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,90 +4,90 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.wrmndfzzy.atomize.MainActivity">
 
     <Button
+        android:id="@+id/select"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/select_photo"
-        android:id="@+id/select"
-        android:layout_marginTop="10dp"
+        android:layout_alignParentStart="false"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentStart="false"
-        android:backgroundTint="@color/colorPrimary"/>
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="@string/select_photo" />
 
     <TextView
         android:id="@+id/imgPath"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textColor="#9e9e9e"
+        android:layout_below="@id/select"
         android:layout_centerHorizontal="true"
-        android:textAlignment="center"
+        android:layout_margin="10dp"
         android:text="@string/no_image"
-        android:layout_below="@id/select" />
+        android:textAlignment="center"
+        android:textColor="#9e9e9e" />
 
     <TextView
+        android:id="@+id/devBy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/devBy"
-        android:textSize="5pt"
-        android:text="@string/devBy"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/devBy"
+        android:textSize="5pt" />
 
     <ProgressBar
+        android:id="@+id/progBar"
+        style="@android:style/Widget.Material.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@android:style/Widget.Material.ProgressBar.Horizontal"
-        android:indeterminate="true"
         android:layout_above="@id/devBy"
-        android:id="@+id/progBar"
         android:layout_marginBottom="10dp"
-        android:visibility="invisible"/>
+        android:indeterminate="true"
+        android:visibility="invisible" />
 
     <Button
+        android:id="@+id/atomize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/atomString"
-        android:id="@+id/atomize"
-        android:layout_centerHorizontal="true"
-        android:onClick="atomize"
-        android:backgroundTint="@color/colorPrimary"
         android:layout_above="@id/progBar"
-        android:layout_marginBottom="10dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:onClick="atomize"
+        android:text="@string/atomString" />
 
     <Switch
+        android:id="@+id/deleteSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/deleteSwitch"
         android:layout_above="@id/atomize"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        android:checked="true"/>
+        android:checked="true" />
 
     <TextView
+        android:id="@+id/deleteSwitchHint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/deleteSwitchHint"
-        android:text="@string/delString"
         android:layout_above="@id/deleteSwitch"
-        android:layout_margin="10dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"
+        android:text="@string/delString" />
 
     <ImageView
         android:id="@+id/imgPreview"
-        android:contentDescription="@null"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imgPath"
         android:layout_above="@id/deleteSwitchHint"
-        android:src="@drawable/atom_watermark"/>
+        android:layout_below="@id/imgPath"
+        android:contentDescription="@null"
+        android:src="@drawable/atom_watermark" />
 
 </RelativeLayout>
