--- a/app/src/main/res/layout/intro_slide4.xml
+++ b/app/src/main/res/layout/intro_slide4.xml
@@ -1,63 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/introSlide4"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
     android:layout_weight="10"
-    android:id="@+id/introSlide4">
+    android:background="@android:color/transparent"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
+        android:layout_weight="3"
         android:gravity="center"
         android:paddingLeft="32dp"
-        android:layout_weight="3"
         android:paddingRight="32dp"
-        android:textSize="28sp"
+        android:text="@string/intro_slide4_title"
         android:textColor="@android:color/white"
-        android:text="@string/intro_slide4_title"/>
+        android:textSize="28sp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
+        android:layout_weight="5"
         android:gravity="center"
-        android:layout_weight="5">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/introSlide4Img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:contentDescription="@null"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:contentDescription="@null"
-            android:src="@drawable/intro_slide_4_icon"/>
+            android:src="@drawable/intro_slide_4_icon" />
 
     </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="3"
         android:layout_gravity="center"
+        android:layout_weight="3"
         android:gravity="center"
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
-        android:textSize="16sp"
+        android:text="@string/intro_slide4_content"
         android:textColor="@android:color/white"
-        android:text="@string/intro_slide4_content"/>
+        android:textSize="16sp" />
+
     <Button
+        android:id="@+id/intro_permissions_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
+        android:onClick="introPermissions"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
-        android:text="@string/intro_slide4_button"
-        android:id="@+id/intro_permissions_button"
-        android:onClick="introPermissions"/>
+        android:text="@string/intro_slide4_button" />
 
     <TextView
         android:layout_width="fill_parent"
