--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
 
     <group>
         <item
             android:id="@+id/menu_aboutlink"
             android:orderInCategory="3"
-            app:showAsAction="never"
-            android:title="@string/menu_about_label"/>
+            android:title="@string/menu_about_label"
+            app:showAsAction="never" />
     </group>
 
 </menu>
