--- a/app/src/main/res/layout/about_list_item.xml
+++ b/app/src/main/res/layout/about_list_item.xml
@@ -5,4 +5,4 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="20dp"
-    android:textSize="16sp"></TextView>
+    android:textSize="16sp" />
